# generator

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  by_const_ref.cpp  by_lvalue_ref.cpp  by_rvalue_ref.cpp  by_value.cpp  member_coro.cpp  nested_sequences.cpp  stateful_alloc.cpp  value_type.cpp
include/rd/: generator.hpp
