file(GLOB_RECURSE source_list "**.cpp")
foreach(file ${source_list})
  get_filename_component(filename ${file} NAME_WE)
  # TODO: create executable in bin/examples (Help wanted)
  add_executable(${filename} ${file})
  target_link_libraries(${filename} PRIVATE project_options)
  target_include_directories(${filename} PRIVATE ../include)
endforeach()
